[gd_scene load_steps=8 format=3 uid="uid://e0d57lqedoto"]

[ext_resource type="Script" path="res://game/editor/editor.gd" id="1_3m44l"]
[ext_resource type="Script" path="res://game/editor/camera.gd" id="2_qotlv"]
[ext_resource type="Texture2D" uid="uid://f0mfv11wcfcf" path="res://assets/textures/white.png" id="2_uw6uo"]
[ext_resource type="Script" path="res://game/editor/button.gd" id="3_weod3"]
[ext_resource type="Script" path="res://game/editor/drag_area.gd" id="4_i1xny"]
[ext_resource type="Theme" uid="uid://potkir36f7bq" path="res://assets/themes/game.tres" id="4_ookdx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2ghn"]
size = Vector2(128, 128)

[node name="Editor" type="Node2D" node_paths=PackedStringArray("load_dialog", "save_dialog", "song_dialog", "blocks", "camera", "play_button", "drag_area", "file_path_label", "song_path_label")]
script = ExtResource("1_3m44l")
load_dialog = NodePath("LoadDialog")
save_dialog = NodePath("SaveDialog")
song_dialog = NodePath("SongDialog")
blocks = NodePath("Blocks")
camera = NodePath("Camera2D")
play_button = NodePath("CanvasLayer/HBoxContainer/PlayButton")
drag_area = NodePath("DragArea")
file_path_label = NodePath("CanvasLayer/VBoxContainer/FilePath")
song_path_label = NodePath("CanvasLayer/VBoxContainer/SongPath")

[node name="Bounds" type="Node2D" parent="."]

[node name="Left" type="Sprite2D" parent="Bounds"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(-963, 0)
scale = Vector2(0.05, 15)
texture = ExtResource("2_uw6uo")

[node name="Right" type="Sprite2D" parent="Bounds"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(963, 0)
scale = Vector2(0.05, 15)
texture = ExtResource("2_uw6uo")

[node name="Start" type="Node2D" parent="."]
scale = Vector2(0.999124, 0.964112)

[node name="StartLabel" type="Label" parent="Start"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ookdx")
text = "Song Start"
horizontal_alignment = 1

[node name="StartBar" type="Sprite2D" parent="Start"]
modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(20, 0.05)
texture = ExtResource("2_uw6uo")

[node name="Blocks" type="Node2D" parent="."]

[node name="DragArea" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.470588)
texture = ExtResource("2_uw6uo")
script = ExtResource("4_i1xny")

[node name="Area2D" type="Area2D" parent="DragArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragArea/Area2D"]
shape = SubResource("RectangleShape2D_h2ghn")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("position_label", "bounds")]
position = Vector2(0, -480)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
script = ExtResource("2_qotlv")
position_label = NodePath("../CanvasLayer/VBoxContainer/CameraPos")
bounds = NodePath("../Bounds")

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(700, 450)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "maps"
filters = PackedStringArray("*.map")

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save Map"
initial_position = 1
size = Vector2i(700, 450)
access = 1
root_subfolder = "maps"
filters = PackedStringArray("*.map")

[node name="SongDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(700, 450)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "music"
filters = PackedStringArray("*.mp3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("4_ookdx")

[node name="NewButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
text = "New
"
script = ExtResource("3_weod3")

[node name="LoadButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
text = "Load"
script = ExtResource("3_weod3")

[node name="SaveButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
text = "Save"
script = ExtResource("3_weod3")

[node name="SaveAsButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
text = "Save As"
script = ExtResource("3_weod3")

[node name="SongButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
text = "Pick Song"
script = ExtResource("3_weod3")

[node name="PlayButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
text = "Play"
script = ExtResource("3_weod3")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2

[node name="CameraPos" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ookdx")
horizontal_alignment = 2

[node name="SongPath" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[node name="FilePath" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[connection signal="select_blocks" from="." to="DragArea" method="_on_editor_select_blocks"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SongDialog" to="." method="_on_song_dialog_file_selected"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/NewButton" to="CanvasLayer/HBoxContainer/NewButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/NewButton" to="CanvasLayer/HBoxContainer/NewButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/LoadButton" to="CanvasLayer/HBoxContainer/LoadButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/LoadButton" to="CanvasLayer/HBoxContainer/LoadButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/SaveButton" to="CanvasLayer/HBoxContainer/SaveButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/SaveButton" to="CanvasLayer/HBoxContainer/SaveButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/SaveAsButton" to="CanvasLayer/HBoxContainer/SaveAsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/SaveAsButton" to="CanvasLayer/HBoxContainer/SaveAsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/SongButton" to="CanvasLayer/HBoxContainer/SongButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/SongButton" to="CanvasLayer/HBoxContainer/SongButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/SongButton" to="." method="_on_song_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/PlayButton" to="CanvasLayer/HBoxContainer/PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/PlayButton" to="CanvasLayer/HBoxContainer/PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
